fix settings not stretched to 100% of panel

--- a/src/settings/settings.scss
+++ b/src/settings/settings.scss
@@ -7,4 +7,7 @@ body {
   p {
     margin: 12px auto;
   }
+  #root {
+    height: 100%;
+  }
 }
